--- a/_config.yml
+++ b/_config.yml
@@ -4,14 +4,14 @@ minimal_mistakes_skin: "air" # Other options: "air", "aqua", "contrast", "dark",
 
 # Site Settings
 locale: "en-US"
-title: "Gap Tap - Customer Support"
+title: "Support"
 title_separator: "-"
 name: "Gap Tap Customer Support"
 description: "The best customer support website in the world."
 url: "https://potable-anarchy.github.io" # Base domain (without trailing slash)
 baseurl: "/support.gap-tap.com" # Matches repo structure (don't leave it as "/")
 repository: "potable-anarchy/support.gap-tap.com" # Your GitHub repo
-
+logo: "/assets/images/gap-tap-logo.png"
 # Permalinks
 permalink: pretty # Removes .html from URLs
 
