Feedback changes version 2

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
   - title: "Contact Us"
-    url: "/"
+    url: "mailto:support@gap-tap.com"
   # title: "About"
   # url: "/"
   # - title: "Sample Posts"
