--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ toc: true # Enable Table of Contents globally
 classes: wide # Ensures content uses full width
 
 # Search & SEO
-search: true
+search: false
 search_provider: lunr # Lightweight search engine (or use "algolia" for better results)
 
 # Author Info
